products/zomlang/tests/language/errors/interface-method-extra-initializer.zom
// RUN: ! %zomc compile --dump-ast %s 2>&1 | %FileCheck %s

interface I {
  fun foo() = 1;
}


// CHECK: Error [ZOM2025]: Expected ';'
// CHECK:   --> {{.*interface-method-extra-initializer.zom}}:4:13
// CHECK:   |
// CHECK: 4 |   fun foo() = 1;
// CHECK:   |             ^
// CHECK: Error [ZOM2051]: Property or signature expected
// CHECK:   --> {{.*interface-method-extra-initializer.zom}}:4:13
// CHECK:   |
// CHECK: 4 |   fun foo() = 1;
// CHECK:   |             ^
// CHECK: Error [ZOM2051]: Property or signature expected
// CHECK:   --> {{.*interface-method-extra-initializer.zom}}:4:15
// CHECK:   |
// CHECK: 4 |   fun foo() = 1;
// CHECK:   |               ^
// CHECK: Error [ZOM2025]: Expected '}'
// CHECK:   --> {{.*interface-method-extra-initializer.zom}}:4:15
// CHECK:   |
// CHECK: 4 |   fun foo() = 1;
// CHECK:   |               ^
// CHECK: Error [ZOM2048]: Declaration or statement expected
// CHECK:   --> {{.*interface-method-extra-initializer.zom}}:5:1
// CHECK:   |
// CHECK: 5 | }
// CHECK:   | ^
// CHECK: {{.*zomc}} compile: Compilation failed due to parsing errors.
// CHECK: Try '{{.*zomc}} compile --help' for more information.
